# first

fastapi-openapi-items/: .env.example  .gitignore  README.md  pyproject.toml  requirements.md
fastapi-openapi-items/app/: main.py
fastapi-openapi-items/app/api/: router.py
fastapi-openapi-items/app/api/routes/: items.py
fastapi-openapi-items/app/core/: config.py
fastapi-openapi-items/app/models/: item.py
fastapi-openapi-items/app/services/: items_service.py
fastapi-openapi-items/plantuml/: architecture.mmd  architecture.puml
fastapi-openapi-items/tests/: conftest.py  test_api.py
